--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "has_flag"
+description = "Check if args has a specific flag"
 version = "0.1.0"
 authors = ["suzh <20077871+SuZHui@users.noreply.github.com>"]
 edition = "2018"
+license = "MIT"
+homepage = "https://github.com/SuZHui/has_flag_rust"
+documentation = "https://github.com/SuZHui/has_flag_rust"
+repository = "https://github.com/SuZHui/has_flag_rust"
+
+categories = ["command-line-utilities"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
